--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
 
     <div class="row">
         <div class="pos">5.</div>
-        <div class="name">luciana08</div>
+        <div class="name">lucianoa98</div>
         <div class="points">7</div>
     </div>
 
@@ -74,3 +74,4 @@
 </body>
 </html>
 <img src="logo.png" alt="Logo" class="logo">
+
