--- a/index.html
+++ b/index.html
@@ -1,77 +1,111 @@
 <!DOCTYPE html>
 <html lang="es">
 <head>
-    <meta charset="UTF-8">
-    <title>M4n Tiers</title>
-    <link rel="stylesheet" href="style.css">
+  <meta charset="UTF-8">
+  <title>MC Tiers Ranking</title>
+  <link rel="stylesheet" href="style.css">
 </head>
 <body>
 
-<div class="ranking">
+  <!-- LOGO -->
+  <header class="header">
+    <img src="logo.png" alt="MC Tiers" class="logo">
+  </header>
 
-    <div class="row top1">
-        <div class="pos">1.</div>
-        <div class="name">ezequielking2007</div>
-        <div class="points">36</div>
+  <!-- RANKING -->
+  <main class="ranking-container">
+
+    <div class="rank-item top1">
+      <span class="rank-number">1.</span>
+      <div class="rank-player">
+        <img src="https://minotar.net/helm/ezequielking2007/32" class="player-skin">
+        <span class="rank-name">ezequielking2007</span>
+      </div>
+      <span class="rank-points gold">36</span>
     </div>
 
-    <div class="row top2">
-        <div class="pos">2.</div>
-        <div class="name">NotRealNEX</div>
-        <div class="points">35</div>
+    <div class="rank-item top2">
+      <span class="rank-number">2.</span>
+      <div class="rank-player">
+        <img src="https://minotar.net/helm/NotRealNEX/32" class="player-skin">
+        <span class="rank-name">NotRealNEX</span>
+      </div>
+      <span class="rank-points silver">35</span>
     </div>
 
-    <div class="row top3">
-        <div class="pos">3.</div>
-        <div class="name">yRemix1</div>
-        <div class="points">15</div>
+    <div class="rank-item top3">
+      <span class="rank-number">3.</span>
+      <div class="rank-player">
+        <img src="https://minotar.net/helm/yRemix1/32" class="player-skin">
+        <span class="rank-name">yRemix1</span>
+      </div>
+      <span class="rank-points bronze">15</span>
     </div>
 
-    <div class="row">
-        <div class="pos">4.</div>
-        <div class="name">lucianoa08</div>
-        <div class="points">9</div>
+    <div class="rank-item">
+      <span class="rank-number">4.</span>
+      <div class="rank-player">
+        <img src="https://minotar.net/helm/lucianoa08/32" class="player-skin">
+        <span class="rank-name">lucianoa08</span>
+      </div>
+      <span class="rank-points">9</span>
     </div>
 
-    <div class="row">
-        <div class="pos">5.</div>
-        <div class="name">ImCrisGod</div>
-        <div class="points">7</div>
+    <div class="rank-item">
+      <span class="rank-number">5.</span>
+      <div class="rank-player">
+        <img src="https://minotar.net/helm/ImCrisGod/32" class="player-skin">
+        <span class="rank-name">ImCrisGod</span>
+      </div>
+      <span class="rank-points">7</span>
     </div>
 
-    <div class="row">
-        <div class="pos">6.</div>
-        <div class="name">BrokenM4n</div>
-        <div class="points">4</div>
+    <div class="rank-item">
+      <span class="rank-number">6.</span>
+      <div class="rank-player">
+        <img src="https://minotar.net/helm/BrokenM4n/32" class="player-skin">
+        <span class="rank-name">BrokenM4n</span>
+      </div>
+      <span class="rank-points">4</span>
     </div>
 
-    <div class="row">
-        <div class="pos">7.</div>
-        <div class="name">???</div>
-        <div class="points">—</div>
+    <div class="rank-item">
+      <span class="rank-number">7.</span>
+      <div class="rank-player">
+        <img src="https://minotar.net/helm/Steve/32" class="player-skin">
+        <span class="rank-name">???</span>
+      </div>
+      <span class="rank-points">—</span>
     </div>
 
-    <div class="row">
-        <div class="pos">8.</div>
-        <div class="name">???</div>
-        <div class="points">—</div>
+    <div class="rank-item">
+      <span class="rank-number">8.</span>
+      <div class="rank-player">
+        <img src="https://minotar.net/helm/Steve/32" class="player-skin">
+        <span class="rank-name">???</span>
+      </div>
+      <span class="rank-points">—</span>
     </div>
 
-    <div class="row">
-        <div class="pos">9.</div>
-        <div class="name">???</div>
-        <div class="points">—</div>
+    <div class="rank-item">
+      <span class="rank-number">9.</span>
+      <div class="rank-player">
+        <img src="https://minotar.net/helm/Steve/32" class="player-skin">
+        <span class="rank-name">???</span>
+      </div>
+      <span class="rank-points">—</span>
     </div>
 
-    <div class="row">
-        <div class="pos">10.</div>
-        <div class="name">???</div>
-        <div class="points">—</div>
+    <div class="rank-item">
+      <span class="rank-number">10.</span>
+      <div class="rank-player">
+        <img src="https://minotar.net/helm/Steve/32" class="player-skin">
+        <span class="rank-name">???</span>
+      </div>
+      <span class="rank-points">—</span>
     </div>
 
-</div>
+  </main>
 
 </body>
 </html>
-<img src="logo.png" alt="Logo" class="logo">
-
