--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
         <img src="https://minotar.net/helm/ezequielking2007/32" class="player-skin">
         <span class="rank-name">ezequielking2007</span>
       </div>
-      <span class="rank-points gold">36</span>
+      <span class="rank-points gold">46</span>
     </div>
 
     <div class="rank-item top2">
@@ -73,9 +73,9 @@
       <span class="rank-number">7.</span>
       <div class="rank-player">
         <img src="https://minotar.net/helm/Steve/32" class="player-skin">
-        <span class="rank-name">???</span>
+        <span class="rank-name">Sweat</span>
       </div>
-      <span class="rank-points">—</span>
+      <span class="rank-points">1</span>
     </div>
 
     <div class="rank-item">
@@ -109,3 +109,4 @@
 
 </body>
 </html>
+
