--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
         <img src="https://minotar.net/helm/NotRealNEX/32" class="player-skin">
         <span class="rank-name">NotRealNEX</span>
       </div>
-      <span class="rank-points silver">24</span>
+      <span class="rank-points silver">32</span>
     </div>
 
     <div class="rank-item top3">
@@ -82,9 +82,9 @@
       <span class="rank-number">8.</span>
       <div class="rank-player">
         <img src="https://minotar.net/helm/Steve/32" class="player-skin">
-        <span class="rank-name">???</span>
+        <span class="rank-name">Roier2007 </span>
       </div>
-      <span class="rank-points">—</span>
+      <span class="rank-points">0</span>
     </div>
 
     <div class="rank-item">
@@ -109,5 +109,6 @@
 
 </body>
 </html>
+
 
 
