--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
     <div class="rank-item">
       <span class="rank-number">5.</span>
       <div class="rank-player">
-        <img src="https://minotar.net/helm/ImCrisGod/32" class="player-skin">
+        <img src="https://minotar.net/helm/Roier2007/32" class="player-skin">
         <span class="rank-name">Roier2007</span>
       </div>
       <span class="rank-points">5</span>
@@ -63,7 +63,7 @@
     <div class="rank-item">
       <span class="rank-number">6.</span>
       <div class="rank-player">
-        <img src="https://minotar.net/helm/BrokenM4n/32" class="player-skin">
+        <img src="https://minotar.net/helm/ImCrisGod/32" class="player-skin">
         <span class="rank-name">ImCrisGod</span>
       </div>
       <span class="rank-points">4</span>
@@ -72,7 +72,7 @@
     <div class="rank-item">
       <span class="rank-number">7.</span>
       <div class="rank-player">
-        <img src="https://minotar.net/helm/Steve/32" class="player-skin">
+        <img src="https://minotar.net/helm/BrokenM4n/32" class="player-skin">
         <span class="rank-name">BrokenM4n</span>
       </div>
       <span class="rank-points">2</span>
@@ -81,7 +81,7 @@
     <div class="rank-item">
       <span class="rank-number">8.</span>
       <div class="rank-player">
-        <img src="https://minotar.net/helm/Steve/32" class="player-skin">
+        <img src="https://minotar.net/helm/Sweat/32" class="player-skin">
         <span class="rank-name">Sweat</span>
       </div>
       <span class="rank-points">1</span>
@@ -109,6 +109,7 @@
 
 </body>
 </html>
+
 
 
 
