--- a/index.html
+++ b/index.html
@@ -7,9 +7,11 @@
 </head>
 <body>
 
-  <!-- LOGO -->
+  <!-- LOGO CLICKEABLE -->
   <header class="header">
-    <img src="logo.png" alt="MC Tiers" class="logo">
+    <a href="https://discord.gg/74XGvcZxNX" target="_blank">
+      <img src="logo.png" alt="MC Tiers" class="logo">
+    </a>
   </header>
 
   <!-- RANKING -->
@@ -109,14 +111,3 @@
 
 </body>
 </html>
-
-
-
-
-
-
-
-
-
-
-
