--- a/index.html
+++ b/index.html
@@ -47,15 +47,6 @@
     <div class="rank-item">
       <span class="rank-number">4.</span>
       <div class="rank-player">
-        <img src="https://minotar.net/helm/Sweat/32" class="player-skin">
-        <span class="rank-name">Sweat</span>
-      </div>
-      <span class="rank-points">11</span>
-    </div>
-
-    <div class="rank-item">
-      <span class="rank-number">5.</span>
-      <div class="rank-player">
         <img src="https://minotar.net/helm/Roier2007/32" class="player-skin">
         <span class="rank-name">Roier2007</span>
       </div>
@@ -63,7 +54,7 @@
     </div>
 
     <div class="rank-item">
-      <span class="rank-number">6.</span>
+      <span class="rank-number">5.</span>
       <div class="rank-player">
         <img src="https://minotar.net/helm/lucianoa08/32" class="player-skin">
         <span class="rank-name">lucianoa08</span>
@@ -72,7 +63,7 @@
     </div>
 
     <div class="rank-item">
-      <span class="rank-number">7.</span>
+      <span class="rank-number">6.</span>
       <div class="rank-player">
         <img src="https://minotar.net/helm/ImCrisGod/32" class="player-skin">
         <span class="rank-name">ImCrisGod</span>
@@ -81,10 +72,19 @@
     </div>
 
     <div class="rank-item">
-      <span class="rank-number">8.</span>
+      <span class="rank-number">7.</span>
       <div class="rank-player">
         <img src="https://minotar.net/helm/BrokenM4n/32" class="player-skin">
         <span class="rank-name">BrokenM4n</span>
+      </div>
+      <span class="rank-points">2</span>
+    </div>
+
+    <div class="rank-item">
+      <span class="rank-number">8.</span>
+      <div class="rank-player">
+        <img src="https://minotar.net/helm/Steve/32" class="player-skin">
+        <span class="rank-name">??</span>
       </div>
       <span class="rank-points">2</span>
     </div>
