--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
         <img src="https://minotar.net/helm/ezequielking2007/32" class="player-skin">
         <span class="rank-name">ezequielking2007</span>
       </div>
-      <span class="rank-points gold">39</span>
+      <span class="rank-points gold">46</span>
     </div>
 
     <div class="rank-item top2">
@@ -47,6 +47,15 @@
     <div class="rank-item">
       <span class="rank-number">4.</span>
       <div class="rank-player">
+        <img src="https://minotar.net/helm/lucianoa08/32" class="player-skin">
+        <span class="rank-name">lucianoa08</span>
+      </div>
+      <span class="rank-points">11</span>
+    </div>
+
+    <div class="rank-item">
+      <span class="rank-number">5.</span>
+      <div class="rank-player">
         <img src="https://minotar.net/helm/Roier2007/32" class="player-skin">
         <span class="rank-name">Roier2007</span>
       </div>
@@ -54,39 +63,30 @@
     </div>
 
     <div class="rank-item">
-      <span class="rank-number">5.</span>
-      <div class="rank-player">
-        <img src="https://minotar.net/helm/lucianoa08/32" class="player-skin">
-        <span class="rank-name">lucianoa08</span>
-      </div>
-      <span class="rank-points">7</span>
-    </div>
-
-    <div class="rank-item">
       <span class="rank-number">6.</span>
       <div class="rank-player">
-        <img src="https://minotar.net/helm/ImCrisGod/32" class="player-skin">
-        <span class="rank-name">ImCrisGod</span>
+        <img src="https://minotar.net/helm/BrokenM4n/32" class="player-skin">
+        <span class="rank-name">BrokenM4n</span>
       </div>
-      <span class="rank-points">5</span>
+      <span class="rank-points">10</span>
     </div>
 
     <div class="rank-item">
       <span class="rank-number">7.</span>
       <div class="rank-player">
-        <img src="https://minotar.net/helm/BrokenM4n/32" class="player-skin">
-        <span class="rank-name">BrokenM4n</span>
+        <img src="https://minotar.net/helm/The_Hakai/32" class="player-skin">
+        <span class="rank-name">The_Hakai</span>
       </div>
-      <span class="rank-points">2</span>
+      <span class="rank-points">6</span>
     </div>
 
     <div class="rank-item">
       <span class="rank-number">8.</span>
       <div class="rank-player">
-        <img src="https://minotar.net/helm/Steve/32" class="player-skin">
-        <span class="rank-name">??</span>
+        <img src="https://minotar.net/helm/ImCrisGod/32" class="player-skin">
+        <span class="rank-name">ImCrisGod</span>
       </div>
-      <span class="rank-points">2</span>
+      <span class="rank-points">5</span>
     </div>
 
     <div class="rank-item">
