--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
         <img src="https://minotar.net/helm/NotRealNEX/32" class="player-skin">
         <span class="rank-name">NotRealNEX</span>
       </div>
-      <span class="rank-points silver">39</span>
+      <span class="rank-points silver">38</span>
     </div>
 
     <div class="rank-item top3">
@@ -91,7 +91,7 @@
       <span class="rank-number">8.</span>
       <div class="rank-player">
         <img src="https://minotar.net/helm/ImCrisGod/32" class="player-skin">
-        <span class="rank-name">ImCrisGod</span>
+        <span class="rank-name">ImCrisGod [Tier Bloqueada]</span>
       </div>
       <span class="rank-points">5</span>
     </div>
