--- a/index.html
+++ b/index.html
@@ -27,17 +27,17 @@
     <div class="rank-item top1">
       <span class="rank-number">1.</span>
       <div class="rank-player">
-        <img src="https://minotar.net/helm/ezequielking2007/32" class="player-skin">
-        <span class="rank-name">ezequielking2007</span>
+        <img src="https://minotar.net/helm/NotRealNEX/32" class="player-skin">
+        <span class="rank-name">NotRealNEX (FINALIZADO)</span>
       </div>
-      <span class="rank-points gold">39</span>
+      <span class="rank-points gold">44</span>
     </div>
 
     <div class="rank-item top2">
       <span class="rank-number">2.</span>
       <div class="rank-player">
-        <img src="https://minotar.net/helm/NotRealNEX/32" class="player-skin">
-        <span class="rank-name">NotRealNEX</span>
+        <img src="https://minotar.net/helm/ezequielking2007/32" class="player-skin">
+        <span class="rank-name">ezequielking2007</span>
       </div>
       <span class="rank-points silver">38</span>
     </div>
@@ -45,19 +45,19 @@
     <div class="rank-item top3">
       <span class="rank-number">3.</span>
       <div class="rank-player">
-        <img src="https://minotar.net/helm/yRemix1/32" class="player-skin">
-        <span class="rank-name">yRemix1</span>
+        <img src="https://minotar.net/helm/Roier2007/32" class="player-skin">
+        <span class="rank-name">Roier2007 (FINALIZADO)</span>
       </div>
-      <span class="rank-points bronze">25</span>
+      <span class="rank-points bronze">32</span>
     </div>
 
     <div class="rank-item">
       <span class="rank-number">4.</span>
       <div class="rank-player">
-        <img src="https://minotar.net/helm/Roier2007/32" class="player-skin">
-        <span class="rank-name">Roier2007</span>
+        <img src="https://minotar.net/helm/yRemix1/32" class="player-skin">
+        <span class="rank-name">yRemix1</span>
       </div>
-      <span class="rank-points">18</span>
+      <span class="rank-points">27</span>
     </div>
 
     <div class="rank-item">
@@ -73,9 +73,9 @@
       <span class="rank-number">6.</span>
       <div class="rank-player">
         <img src="https://minotar.net/helm/lucianoa08/32" class="player-skin">
-        <span class="rank-name">lucianoa08</span>
+        <span class="rank-name">lucianoa08 (FINALIZADO)</span>
       </div>
-      <span class="rank-points">11</span>
+      <span class="rank-points">12</span>
     </div>
 
     <div class="rank-item">
@@ -84,7 +84,7 @@
         <img src="https://minotar.net/helm/The_Hakai/32" class="player-skin">
         <span class="rank-name">The_Hakai</span>
       </div>
-      <span class="rank-points">7</span>
+      <span class="rank-points">8</span>
     </div>
 
     <div class="rank-item">
@@ -124,10 +124,10 @@
     <div class="rank-item top1">
       <span class="rank-number">1.</span>
       <div class="rank-player">
-        <img src="https://minotar.net/helm/ezequielking2007/32" class="player-skin">
-        <span class="rank-name">Temporada 1 / ezequielking2007</span>
+        <img src="https://minotar.net/helm/NotRealNEX/32" class="player-skin">
+        <span class="rank-name">Temporada 1 / NotRealNEX</span>
       </div>
-      <span class="rank-points gold">39</span>
+      <span class="rank-points gold">44</span>
     </div>
 
     <div class="rank-item top2">
@@ -152,4 +152,3 @@
 
 </body>
 </html>
-
