--- a/index.html
+++ b/index.html
@@ -27,19 +27,19 @@
     <div class="rank-item top1">
       <span class="rank-number">1.</span>
       <div class="rank-player">
-        <img src="https://minotar.net/helm/NotRealNEX/32" class="player-skin">
-        <span class="rank-name">NotRealNEX (FINALIZADO)</span>
+        <img src="https://minotar.net/helm/ezequielking2007/32" class="player-skin">
+        <span class="rank-name">ezequielking2007 (FINALIZADO)</span>
       </div>
-      <span class="rank-points gold">44</span>
+      <span class="rank-points gold">45</span>
     </div>
 
     <div class="rank-item top2">
       <span class="rank-number">2.</span>
       <div class="rank-player">
-        <img src="https://minotar.net/helm/ezequielking2007/32" class="player-skin">
-        <span class="rank-name">ezequielking2007</span>
+        <img src="https://minotar.net/helm/NotRealNEX/32" class="player-skin">
+        <span class="rank-name">NotRealNEX (FINALIZADO)</span>
       </div>
-      <span class="rank-points silver">38</span>
+      <span class="rank-points silver">44</span>
     </div>
 
     <div class="rank-item top3">
@@ -152,3 +152,4 @@
 
 </body>
 </html>
+
