--- a/index.html
+++ b/index.html
@@ -124,8 +124,8 @@
     <div class="rank-item top1">
       <span class="rank-number">1.</span>
       <div class="rank-player">
-        <img src="https://minotar.net/helm/NotRealNEX/32" class="player-skin">
-        <span class="rank-name">Temporada 1 / NotRealNEX</span>
+        <img src="https://minotar.net/helm/ezequielking2007/32" class="player-skin">
+        <span class="rank-name">Temporada 1 / ezequielking2007</span>
       </div>
       <span class="rank-points gold">44</span>
     </div>
@@ -152,4 +152,5 @@
 
 </body>
 </html>
+
 
